fix: letter-spacing

--- a/wildlife/style.css
+++ b/wildlife/style.css
@@ -596,6 +596,7 @@ body {
   line-height: 27px;
   color: #f7f7f7;
   margin-bottom: 49px;
+  letter-spacing: 0.02px;
 }
 .donate-form__submit {
   padding: 16px 42px;
